syntax = "proto3";

package eshop.reviewservice.grpc;

option java_multiple_files = true;
option java_package = "eshop.reviewservice.grpc";
option java_outer_classname = "ReviewServiceProto";

service ReviewService {
  rpc getReviewsByProductId(GetReviewsByProductIdRequest) returns (GetReviewsByProductIdResponse) {}
  rpc createReview(CreateReviewRequest) returns (Review) {}
  rpc getAverageRatingForProduct(GetAverageRatingForProductRequest) returns(GetAverageRatingForProductResponse) {}
}

message Review {
  string id = 1;
  string text = 2;
  int32 rate = 3;
  string productId = 4;
  string createdAt = 5;
}

message GetReviewsByProductIdRequest {
  string productId = 1;
  int32 page = 2;
  int32 size = 3;
}

message GetReviewsByProductIdResponse {
  int32 totalPage = 1;
  int64 totalElements = 2;
  bool hasNext = 3;
  bool hasPrevious = 4;
  repeated Review reviews = 5;
}

message CreateReviewRequest {
  string productId = 1;
  int32 rate = 2;
  string text = 3;
}

message GetAverageRatingForProductRequest {
  string productId = 1;
}

message GetAverageRatingForProductResponse {
  string productId = 1;
  double rating = 2;
}